# python-deep-dive

./: .gitignore  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/python_classes/: 01_introduction.md  02_attributes.md  03_methods.md  04_encapsulation.md  05_inheritance.md  06_metaclass.md  07_abstract.md  08_dataclasses.md
site/: 404.html  index.html
site/search/: search_index.json
src/python_deep_dive/: __about__.py  __init__.py  __main__.py
src/python_deep_dive/cli/: __init__.py
src/python_deep_dive/python_classes/: 01_introduction.py  02_attributs.py  03_méthodes.py  04_encapsulation.py  05_inheritance.py  08_dataclasses.py
